# llama-cpp-wrapper

./: .gitignore  README.md
examples/simple-chat/: CMakeLists.txt  README.md  cmd_line_parse.cpp  cmd_line_parse.h  main.cpp
include/: LLMInference.h
src/: LLMInference.cpp
